# sifli-pac

./: .envrc  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  update.ps1  update.sh
.github/workflows/: build.yml
contrib/nix/: chiptool.nix  flake.nix  form.nix
devices/sf32lb52x/: device.x
src/: lib.rs
src/sf32lb52x/: _vectors.rs  aes.rs  atim.rs  audcodec.rs  audprc.rs  bt_mac.rs  bt_phy.rs  bt_rfc.rs  btim.rs  crc.rs  dmac.rs  efusec.rs  epic.rs  extdma.rs  ezip.rs  gpadc.rs  gptim.rs  hpsys_aon.rs  hpsys_cfg.rs  hpsys_gpio.rs  hpsys_pinmux.rs  hpsys_rcc.rs  i2c.rs  i2s.rs  iwdt.rs  lcdc.rs  lpsys_aon.rs  lpsys_cfg.rs  lpsys_pinmux.rs  lpsys_rcc.rs  lptim.rs  mailbox.rs  mod.rs  mpi.rs  patch.rs  pdm.rs  pmuc.rs  ptc.rs  sdmmc.rs  spi.rs  (+4 more)
src/sf32lb52x/aes/: regs.rs
src/sf32lb52x/atim/: regs.rs
src/sf32lb52x/audcodec/: regs.rs
src/sf32lb52x/audprc/: regs.rs
src/sf32lb52x/bt_mac/: regs.rs
src/sf32lb52x/bt_phy/: regs.rs
src/sf32lb52x/bt_rfc/: regs.rs
src/sf32lb52x/btim/: regs.rs
src/sf32lb52x/crc/: regs.rs
src/sf32lb52x/dmac/: regs.rs  vals.rs
src/sf32lb52x/efusec/: regs.rs
src/sf32lb52x/epic/: regs.rs
src/sf32lb52x/extdma/: regs.rs  vals.rs
src/sf32lb52x/ezip/: regs.rs
src/sf32lb52x/gpadc/: regs.rs  vals.rs
svd/: README.md  SF32LB52x.svd
tools/: header2yaml.py
transform/: SF32LB52x.yaml
transform/common/: bt_mac.yaml  bt_phy.yaml  bt_rfc.yaml  dmac.yaml  extdma.yaml  gpadc.yaml  gpio.yaml  lcdc.yaml  mailbox.yaml  patch.yaml  ptc.yaml  rcc.yaml  setup.yaml  tim.yaml  usart.yaml
(+37 files in other folders)
